:hammer: improve copy-env script with turbo

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -3,15 +3,15 @@
   "version": "1.0.0-beta.50",
   "scripts": {
     "dev": "rimraf .env && next dev",
-    "build": "yarn validate && yarn copy-env && yarn next-build",
+    "build": "yarn validate && yarn next-build",
     "next-build": "next build",
     "start": "next start",
     "start:proxy-experimental": "next start --port 80",
-    "copy-env": "node ../../scripts/copy-env.mjs --client --api",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,md,css,json}\" --ignore-path .gitignore",
     "lint": "eslint . --ext .ts,.js,.tsx,.jsx,",
     "validate": "node ../../scripts/validate.mjs",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "copy-env": "node ../../scripts/copy-env.mjs --client"
   },
   "dependencies": {
     "@casper124578/use-socket.io": "3.1.1",
