--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -7,7 +7,8 @@
     "start:docker": "yarn add -D esbuild esbuild-linux-64 && yarn workspace @snailycad/schemas build && yarn workspace @snailycad/config build && npx prisma migrate deploy && ts-node -r tsconfig-paths/register src/main.ts",
     "format": "prisma format",
     "generate": "prisma generate",
-    "typecheck": "yarn run generate && tsc --noEmit"
+    "typecheck": "yarn run generate && tsc --noEmit",
+    "copy-env": "node ../../scripts/copy-env.mjs --api"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
