--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -46,6 +46,7 @@
     "react-colorful": "^5.5.1",
     "react-cool-onclickoutside": "^1.7.0",
     "react-cropper": "^2.1.8",
+    "react-digit-input": "^2.1.0",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.2.0",
     "react-select": "^5.2.2",
