adding custom port

--- a/.env.example
+++ b/.env.example
@@ -40,7 +40,8 @@ SECURE_COOKIES_FOR_IFRAME="false"
 # When using Docker, make sure to change this in the `production.docker-compose.yml` file too.
 PORT_API=8080
 
-
+# The port of which the client will run on. Default: 3000
+PORT_CLIENT=3000
 
 # Do not change this.
 NODE_ENV="production"
