--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "colorette": "2.0.16",
     "concurrently": "^7.0.0",
     "copy": "^0.3.2",
+    "dotenv": "^16.0.0",
     "eslint": "^8.8.0",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
