:hammer: chore: general improvements

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+# Documentation can be found at:  https://cad-docs.caspertheghost.me/docs/installations
+
 # This is the password to the postgress database.
 POSTGRES_PASSWORD="admin"
 
@@ -10,8 +12,6 @@ DB_PORT="5432"
 
 # The database name.
 POSTGRES_DB="snaily-cad-v4"
-
-
 
 # This is a random value to keep the CAD's cookies secured. Make sure to change this!
 JWT_SECRET="some-random-string-of-characters"
