--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -60,6 +60,7 @@
     "sortablejs": "^1.14.0",
     "type-fest": "^2.11.2",
     "uuid": "^8.3.2",
+    "zod": "^3.11.6",
     "zustand": "^3.7.0"
   },
   "devDependencies": {
