:hammer: chore: update .env.example

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,10 @@ POSTGRES_PASSWORD="admin"
 POSTGRES_USER="admin"
 
 # 'postgres' is the docker-compose image. Keep port as '5432' when using docker-compose
+# The database host. (Most likely localhost)
 DB_HOST="postgres"
+
+# The database port
 DB_PORT="5432"
 
 # The database name.
@@ -21,19 +24,20 @@ JWT_SECRET="some-random-string-of-characters"
 ENCRYPTION_TOKEN="Geu2WGypP7irbwa3tCeeKS6YiyluFLep"
 
 # This is the URL to your site where the CAD is hosted.
-# -> eg https://cad.mysite.com or http://99.99.00.190:3000
+# -> e.g. https://cad.mysite.com or http://99.99.00.190:3000
 CORS_ORIGIN_URL="http://localhost:3000"
 
 # The URL/IP to where the API is hosted.
-# -> eg https://cad-api.mysite.com/v1 or http://99.99.00.190:8080/v1
+# -> e.g. https://cad-api.mysite.com/v1 or http://99.99.00.190:8080/v1
 NEXT_PUBLIC_PROD_ORIGIN="http://api:8080/v1"
 
 # only enter this value if you're using a domain!
-# domain should only be the, not including sub-domains
+# domain should only be the domain, not including sub-domains
 # example: `DOMAIN="example.com"`
 DOMAIN=""
 
 # "true" or "false"
+# Can only be enabled when having valid SSL (https) and a domain.
 SECURE_COOKIES_FOR_IFRAME="false"
 
 # The port of which the API will run on. Default: 8080
