--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -49,6 +49,7 @@
     "react-digit-input": "^2.1.0",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.2.0",
+    "react-leaflet": "^3.2.5",
     "react-select": "^5.2.2",
     "react-sortablejs": "^6.1.1",
     "react-table": "^7.7.0",
