--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -17,6 +17,7 @@
     "@casper124578/use-socket.io": "3.1.1",
     "@casper124578/useful": "^1.4.6",
     "@headlessui/react": "^1.4.3",
+    "@radix-ui/react-accordion": "^0.1.5",
     "@radix-ui/react-context-menu": "^0.1.4",
     "@radix-ui/react-dropdown-menu": "^0.1.4",
     "@radix-ui/react-hover-card": "^0.1.3",
@@ -34,9 +35,7 @@
     "formik": "^2.2.9",
     "hex-color-regex": "^1.1.0",
     "is-hotkey": "^0.2.0",
-    "jquery": "^3.6.0",
     "leaflet": "^1.7.1",
-    "leaflet.markercluster": "^1.5.3",
     "next": "^12.0.10",
     "next-intl": "2.4.0",
     "nookies": "^2.5.2",
@@ -49,6 +48,7 @@
     "react-digit-input": "^2.1.0",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.2.0",
+    "react-leaflet": "^3.2.5",
     "react-select": "^5.2.2",
     "react-sortablejs": "^6.1.1",
     "react-table": "^7.7.0",
@@ -64,9 +64,7 @@
     "zustand": "^3.7.0"
   },
   "devDependencies": {
-    "@types/jquery": "^3.5.13",
     "@types/leaflet": "^1.7.9",
-    "@types/leaflet.markercluster": "^1.4.6",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "@types/react-table": "^7.7.9",
