--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,8 +5,7 @@
 
 version: 2
 updates:
-  - package-ecosystem: "npm" # See documentation for possible values
+  - package-ecosystem: "yarn" # See documentation for possible values
     directory: "." # Location of package manifests
-    target-branch: "dev"
     schedule:
       interval: "monthly"
