:hammer: chore: bump yarn & deps

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -19,12 +19,13 @@
     "@types/express": "^4.17.13",
     "@types/glob": "^7.2.0",
     "@types/jsonwebtoken": "8.5.8",
-    "@types/node": "^17.0.18",
+    "@types/node": "^17.0.19",
     "@types/qrcode": "^1.4.2",
-    "esbuild": "^0.14.22",
+    "esbuild": "^0.14.23",
     "esbuild-register": "^3.3.2",
-    "ts-node": "^10.4.0",
-    "tsconfig-paths": "^3.12.0"
+    "ts-node": "^10.5.0",
+    "tsconfig-paths": "^3.12.0",
+    "typescript": "^4.5.5"
   },
   "dependencies": {
     "@discordjs/rest": "^0.3.0",
@@ -33,15 +34,15 @@
     "@snailycad/schemas": "1.0.0-beta.60",
     "@snailycad/types": "1.0.0-beta.60",
     "@snailycad/utils": "1.0.0-beta.60",
-    "@tsed/common": "^6.102.5",
-    "@tsed/core": "^6.102.5",
-    "@tsed/di": "^6.102.5",
-    "@tsed/exceptions": "^6.102.5",
-    "@tsed/json-mapper": "^6.102.5",
-    "@tsed/platform-express": "^6.102.5",
-    "@tsed/schema": "^6.102.5",
-    "@tsed/socketio": "^6.102.5",
-    "@tsed/swagger": "^6.102.5",
+    "@tsed/common": "^6.102.7",
+    "@tsed/core": "^6.102.7",
+    "@tsed/di": "^6.102.7",
+    "@tsed/exceptions": "^6.102.7",
+    "@tsed/json-mapper": "^6.102.7",
+    "@tsed/platform-express": "^6.102.7",
+    "@tsed/schema": "^6.102.7",
+    "@tsed/socketio": "^6.102.7",
+    "@tsed/swagger": "^6.102.7",
     "bcrypt": "^5.0.1",
     "compression": "1.7.4",
     "cookie": "^0.4.2",
@@ -57,8 +58,6 @@
     "prisma": "^3.9.2",
     "qrcode": "^1.5.0",
     "socket.io": "^4.4.1",
-    "ts-node": "^10.5.0",
-    "typescript": "^4.5.5",
     "undici": "^4.14.1"
   }
 }
