--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -7,6 +7,7 @@
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
+    "@snailycad/types": "1.0.0-beta.62",
     "tsup": "^5.11.13",
     "typescript": "^4.5.5"
   },
