--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "private": true,
   "name": "snailycad",
-  "version": "1.0.0-beta.62",
+  "version": "1.0.0-beta.63",
   "packageManager": "yarn@3.2.0",
-  "workspaces": [
-    "packages/**"
-  ],
+  "workspaces": ["packages/**"],
   "scripts": {
     "format:quick": "pretty-quick --staged --pattern \"packages/**/*.{js,jsx,ts,tsx,md,css,json}\"",
     "format": "prettier --write \"./packages/**/**/*.{js,jsx,ts,tsx,md,css,json}\" --ignore-path .gitignore",
