--- a/packages/utils/tsconfig.json
+++ b/packages/utils/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "outDir": "./dist",
     "target": "ESNext",
-    "module": "ES2022",
+    "module": "CommonJS",
     "moduleResolution": "node",
     "declaration": true,
     "skipLibCheck": true
