--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -2,7 +2,7 @@
   "name": "@snailycad/api",
   "version": "1.0.0-beta.66",
   "scripts": {
-    "dev": "prisma migrate dev && prisma generate && nodemon --watch \"src/**/*.ts\" --ignore \"node_modules/**/*\" --exec ts-node -r tsconfig-paths/register src/main.ts",
+    "dev": "prisma migrate dev && prisma generate && nodemon --watch \"src/**/*.ts\" --ignore \"node_modules/**/*\" --exec ts-node --esm -r tsconfig-paths/register src/main.ts",
     "start": "yarn workspace @snailycad/schemas build && yarn workspace @snailycad/config build && npx prisma migrate deploy && npx prisma generate && ts-node -r tsconfig-paths/register src/main.ts",
     "start:docker": "yarn add -D esbuild esbuild-linux-64 && yarn workspace @snailycad/schemas build && yarn workspace @snailycad/config build && npx prisma migrate deploy && prisma generate &&  ts-node -r tsconfig-paths/register src/main.ts",
     "format": "prisma format",
@@ -26,7 +26,7 @@
     "esbuild": "^0.14.25",
     "esbuild-register": "^3.3.2",
     "regenerator-runtime": "^0.13.9",
-    "ts-node": "^10.6.0",
+    "ts-node": "^10.7.0",
     "tsconfig-paths": "^3.13.0",
     "typescript": "^4.6.2"
   },
@@ -37,15 +37,15 @@
     "@snailycad/schemas": "1.0.0-beta.66",
     "@snailycad/types": "1.0.0-beta.66",
     "@snailycad/utils": "1.0.0-beta.66",
-    "@tsed/common": "^6.104.0",
-    "@tsed/core": "^6.104.0",
-    "@tsed/di": "^6.104.0",
-    "@tsed/exceptions": "^6.104.0",
-    "@tsed/json-mapper": "^6.104.0",
-    "@tsed/platform-express": "^6.104.0",
-    "@tsed/schema": "^6.104.0",
-    "@tsed/socketio": "^6.104.0",
-    "@tsed/swagger": "^6.104.0",
+    "@tsed/common": "^6.105.0",
+    "@tsed/core": "^6.105.0",
+    "@tsed/di": "^6.105.0",
+    "@tsed/exceptions": "^6.105.0",
+    "@tsed/json-mapper": "^6.105.0",
+    "@tsed/platform-express": "^6.105.0",
+    "@tsed/schema": "^6.105.0",
+    "@tsed/socketio": "^6.105.0",
+    "@tsed/swagger": "^6.105.0",
     "bcrypt": "^5.0.1",
     "compression": "1.7.4",
     "cookie": "^0.4.2",
