--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -2,7 +2,7 @@
   "name": "@snailycad/api",
   "version": "1.0.0-beta.66",
   "scripts": {
-    "dev": "prisma migrate dev && prisma generate && nodemon --watch \"src/**/*.ts\" --ignore \"node_modules/**/*\" --exec ts-node --esm -r tsconfig-paths/register src/main.ts",
+    "dev": "prisma migrate dev && prisma generate && nodemon --watch \"src/**/*.ts\" --ignore \"node_modules/**/*\" --exec ts-node -r tsconfig-paths/register src/main.ts",
     "start": "yarn workspace @snailycad/schemas build && yarn workspace @snailycad/config build && npx prisma migrate deploy && npx prisma generate && ts-node -r tsconfig-paths/register src/main.ts",
     "start:docker": "yarn add -D esbuild esbuild-linux-64 && yarn workspace @snailycad/schemas build && yarn workspace @snailycad/config build && npx prisma migrate deploy && prisma generate &&  ts-node -r tsconfig-paths/register src/main.ts",
     "format": "prisma format",
