--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "target": "esnext",
-    "module": "es2020",
+    "module": "commonjs",
     "esModuleInterop": true,
     "moduleResolution": "node",
     "importHelpers": true,
