--- a/turbo.json
+++ b/turbo.json
@@ -48,6 +48,13 @@
       ],
       "outputs": [],
       "cache": false
+    },
+    "test": {
+      "dependsOn": [
+        "^test"
+      ],
+      "outputs": [],
+      "cache": false
     }
   },
   "globalDependencies": [
