--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -20,12 +20,16 @@
   },
   "scripts": {
     "build": "tsup",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test:watch": "vitest --watch",
+    "test": "vitest run"
   },
   "devDependencies": {
     "@snailycad/types": "1.0.0-beta.67",
     "tsup": "^5.11.13",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "vite": "^2.8.6",
+    "vitest": "^0.6.0"
   },
   "tsup": {
     "entry": [
