--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@casper124578/eslint-config": "3.0.2-alpha.0",
-    "@casper124578/eslint-config-next": "3.0.3-alpha.0",
-    "@casper124578/eslint-config-react": "3.0.3-alpha.0",
+    "@casper124578/eslint-config": "3.0.0",
+    "@casper124578/eslint-config-next": "3.0.0",
+    "@casper124578/eslint-config-react": "3.0.0",
     "colorette": "2.0.16",
     "concurrently": "^7.0.0",
     "copy": "^0.3.2",
