--- a/.eslintrc
+++ b/.eslintrc
@@ -21,8 +21,11 @@
   },
   "rules": {
     "@next/next/no-img-element": "off",
-    "@next/next/no-server-import-in-page": "error",
-    "@next/next/no-script-component-in-head-component": "off"
+    "@typescript-eslint/no-non-null-asserted-optional-chain": "error",
+    "@typescript-eslint/no-unnecessary-type-constraint": "error",
+    "@typescript-eslint/no-non-null-asserted-nullish-coalescing": "error",
+    "@typescript-eslint/no-unnecessary-condition": "error",
+    "@typescript-eslint/no-unnecessary-boolean-literal-compare": "error"
   },
   "overrides": [
     {
