--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -11,7 +11,9 @@
     "lint": "eslint . --ext .ts,.js,.tsx,.jsx,",
     "validate": "node ../../scripts/validate.mjs",
     "typecheck": "tsc --noEmit",
-    "copy-env": "node ../../scripts/copy-env.mjs --client"
+    "copy-env": "node ../../scripts/copy-env.mjs --client",
+    "test:watch": "vitest --watch",
+    "test": "vitest run"
   },
   "dependencies": {
     "@casper124578/use-socket.io": "3.1.1",
@@ -76,6 +78,8 @@
     "rimraf": "^3.0.2",
     "sass": "^1.49.9",
     "tailwindcss": "^3.0.23",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "vite": "^2.8.6",
+    "vitest": "^0.6.1"
   }
 }
