:hammer: chore: minor fixes

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -11,8 +11,9 @@
     "copy-env": "node ../../scripts/copy-env.mjs --api"
   },
   "devDependencies": {
-    "@swc/core": "^1.2.155",
-    "@swc/helpers": "^0.3.6",
+    "@swc/cli": "^0.1.55",
+    "@swc/core": "^1.2.157",
+    "@swc/helpers": "^0.3.8",
     "@types/bcrypt": "^5.0.0",
     "@types/compression": "^1.7.2",
     "@types/cookie": "^0.4.1",
@@ -32,21 +33,21 @@
   },
   "dependencies": {
     "@discordjs/rest": "^0.3.0",
-    "@prisma/client": "^3.10.0",
+    "@prisma/client": "^3.11.0",
     "@snailycad/config": "1.0.0-beta.72",
     "@snailycad/permissions": "1.0.0-beta.72",
     "@snailycad/schemas": "1.0.0-beta.72",
     "@snailycad/types": "1.0.0-beta.72",
     "@snailycad/utils": "1.0.0-beta.72",
-    "@tsed/common": "^6.106.0",
-    "@tsed/core": "^6.106.0",
-    "@tsed/di": "^6.106.0",
-    "@tsed/exceptions": "^6.106.0",
-    "@tsed/json-mapper": "^6.106.0",
-    "@tsed/platform-express": "^6.106.0",
-    "@tsed/schema": "^6.106.0",
-    "@tsed/socketio": "^6.106.0",
-    "@tsed/swagger": "^6.106.0",
+    "@tsed/common": "^6.107.2",
+    "@tsed/core": "^6.107.2",
+    "@tsed/di": "^6.107.2",
+    "@tsed/exceptions": "^6.107.2",
+    "@tsed/json-mapper": "^6.107.2",
+    "@tsed/platform-express": "^6.107.2",
+    "@tsed/schema": "^6.107.2",
+    "@tsed/socketio": "^6.107.2",
+    "@tsed/swagger": "^6.107.2",
     "bcrypt": "^5.0.1",
     "compression": "1.7.4",
     "cookie": "^0.4.2",
@@ -59,7 +60,7 @@
     "nanoid": "^3.3.1",
     "nodemon": "^2.0.15",
     "otplib": "^12.0.1",
-    "prisma": "^3.10.0",
+    "prisma": "^3.11.0",
     "qrcode": "^1.5.0",
     "socket.io": "^4.4.1",
     "undici": "^4.15.1"
