--- a/packages/permissions/package.json
+++ b/packages/permissions/package.json
@@ -40,7 +40,7 @@
         "dist/permissions.d.ts"
       ],
       "defaults": [
-        "dist/defaults/index.d.ts"
+        "dist/defaults/*"
       ]
     }
   }
