:hammer: chore: enable turbo cache for typechecks & tests

--- a/turbo.json
+++ b/turbo.json
@@ -46,15 +46,13 @@
       "dependsOn": [
         "^typecheck"
       ],
-      "outputs": [],
-      "cache": false
+      "outputs": []
     },
     "test": {
       "dependsOn": [
         "^test"
       ],
-      "outputs": [],
-      "cache": false
+      "outputs": []
     }
   },
   "globalDependencies": [
