--- a/.github/workflows/test-builds-typecheck.yml
+++ b/.github/workflows/test-builds-typecheck.yml
@@ -19,12 +19,21 @@ jobs:
           cache-dependency-path: yarn.lock
           node-version: ${{ matrix.node-version }}
 
-      - uses: actions/cache@v2
+      - name: Turbo Cache
+        id: turbo-cache
+        uses: actions/cache@v2
+        with:
+          path: .turbo
+          key: turbo-${{ github.job }}-${{ github.event.pull_request.head.ref }}-${{ github.event.pull_request.head.sha }}
+          restore-keys: |
+            turbo-${{ github.job }}-${{ github.event.pull_request.head.ref }}-
+
+      - name: Next.js Cache
+        id: nextjs-cache
+        uses: actions/cache@v2
         with:
           path: ${{ github.workspace }}/packages/client/.next/cache
-          # Generate a new cache whenever packages or source files change.
           key: ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
-          # If source files changed but packages didn't, rebuild from a prior cache.
           restore-keys: |
             ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn.lock') }}-
 
