--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-tabs": "^0.1.5",
     "@radix-ui/react-toolbar": "^0.1.5",
     "@react-aria/focus": "^3.5.3",
+    "@react-aria/interactions": "^3.8.2",
     "@react-aria/label": "^3.2.4",
     "@react-aria/ssr": "^3.1.2",
     "@snailycad/config": "1.0.0-beta.74",
