--- a/packages/schemas/package.json
+++ b/packages/schemas/package.json
@@ -7,6 +7,7 @@
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
+    "tslib": "^2.3.1",
     "tsup": "^5.12.1",
     "typescript": "^4.6.2"
   },
@@ -21,6 +22,7 @@
     "bundle": false,
     "platform": "node",
     "target": "node16",
-    "silent": true
+    "silent": true,
+    "minify": true
   }
 }
