--- a/packages/schemas/tsconfig.json
+++ b/packages/schemas/tsconfig.json
@@ -6,6 +6,7 @@
     "module": "CommonJS",
     "moduleResolution": "node",
     "declaration": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "importHelpers": true
   }
 }
