--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@snailycad/types": "1.0.0-beta.74",
     "c8": "^7.11.0",
+    "tslib": "^2.3.1",
     "tsup": "^5.12.1",
     "typescript": "^4.6.2",
     "vite": "^2.8.6",
@@ -40,6 +41,7 @@
     "bundle": false,
     "platform": "node",
     "target": "node16",
-    "silent": true
+    "silent": true,
+    "minify": true
   }
 }
