--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -8,7 +8,9 @@
     "format": "prisma format",
     "generate": "prisma generate",
     "typecheck": "yarn run generate && tsc --noEmit",
-    "copy-env": "node ../../scripts/copy-env.mjs --api"
+    "copy-env": "node ../../scripts/copy-env.mjs --api",
+    "test:watch": "vitest --watch",
+    "test": "vitest run"
   },
   "devDependencies": {
     "@swc/core": "^1.2.155",
@@ -28,7 +30,9 @@
     "regenerator-runtime": "^0.13.9",
     "ts-node": "^10.7.0",
     "tsconfig-paths": "^3.14.0",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "vite": "^2.8.6",
+    "vitest": "^0.7.10"
   },
   "dependencies": {
     "@discordjs/rest": "^0.3.0",
