--- a/.github/workflows/test-builds-typecheck.yml
+++ b/.github/workflows/test-builds-typecheck.yml
@@ -47,4 +47,4 @@ jobs:
         run: yarn turbo run typecheck
 
       - name: Run turbo test
-        run: yarn turbo run test
+        run: yarn turbo run test --parallel
