--- a/packages/telemetry/package.json
+++ b/packages/telemetry/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@snailycad/telementry",
+  "name": "@snailycad/telemetry",
   "version": "1.0.0-beta.77",
   "main": "./dist/index.js",
   "scripts": {
@@ -7,6 +7,7 @@
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
+    "@types/node": "^17.0.23",
     "tslib": "^2.3.1",
     "tsup": "^5.12.1",
     "typescript": "^4.6.3"
