:hammer: chore: add error name & message

--- a/.env.example
+++ b/.env.example
@@ -52,3 +52,6 @@ NODE_ENV="production"
 
 # Do not change this, unless you know what you're doing!
 DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${DB_HOST}:${DB_PORT}/${POSTGRES_DB}?sslmode=prefer
+
+# Errors get reported to Linear (Project manager). This is done so errors can be fixed faster.
+TELEMETRY_ENABLED="true"
