:hammer: chore: update eslint configs

--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@casper124578/eslint-config": "3.0.0",
-    "@casper124578/eslint-config-next": "3.0.0",
-    "@casper124578/eslint-config-react": "3.0.0",
+    "@casper124578/eslint-config": "4.1.0",
+    "@casper124578/eslint-config-next": "4.1.0",
+    "@casper124578/eslint-config-react": "4.1.0",
+    "@typescript-eslint/eslint-plugin": "latest",
     "colorette": "2.0.16",
     "concurrently": "^7.0.0",
     "copy": "^0.3.2",
     "dotenv": "^16.0.0",
-    "eslint": "^8.11.0",
+    "eslint": "^8.12.0",
     "husky": "^7.0.4",
     "prettier": "^2.6.1",
     "pretty-quick": "^3.1.3",
