--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     container_name: "snaily-cad-api"
 
     user: node
-    image: node:16-alpine
+    image: node:16
     command: "yarn workspace @snailycad/api dev"
     ports:
       - "8080:8080"
