--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@casper124578/eslint-config": "4.1.0",
     "@casper124578/eslint-config-next": "4.1.0",
     "@casper124578/eslint-config-react": "4.1.0",
+    "@swc/core-linux-x64-musl": "^1.2.161",
     "@typescript-eslint/eslint-plugin": "latest",
     "colorette": "2.0.16",
     "concurrently": "^7.0.0",
