--- a/production.docker-compose.yml
+++ b/production.docker-compose.yml
@@ -18,7 +18,7 @@ services:
     container_name: "snaily-cad-api"
 
     user: node
-    image: node:16-alpine
+    image: node:16
     command: "yarn workspace @snailycad/api start:docker"
     ports:
       - "8080:8080"
@@ -41,7 +41,7 @@ services:
     container_name: "snaily-cad-client"
 
     user: node
-    image: node:16-alpine
+    image: node:16
     command: "yarn workspace @snailycad/client start"
     ports:
       - "3000:3000"
