--- a/.eslintrc
+++ b/.eslintrc
@@ -25,7 +25,8 @@
     "@typescript-eslint/no-unnecessary-type-constraint": "error",
     "@typescript-eslint/no-non-null-asserted-nullish-coalescing": "error",
     "@typescript-eslint/no-unnecessary-condition": "error",
-    "@typescript-eslint/no-unnecessary-boolean-literal-compare": "error"
+    "@typescript-eslint/no-unnecessary-boolean-literal-compare": "error",
+    "@typescript-eslint/no-redundant-type-constituents": "off"
   },
   "overrides": [
     {
