--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,19 +1,31 @@
 {
   "name": "@snailycad/types",
-  "version": "1.0.0-beta.79",
+  "version": "1.0.0-beta.79.1",
+  "exports": {
+    ".": {
+      "require": "./dist/index.js",
+      "import": "./dist/index.mjs"
+    },
+    "./package.json": "./package.json"
+  },
+  "files": [
+    "dist"
+  ],
   "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsup",
     "typecheck": "tsc --noEmit"
+  },
+  "dependencies": {
+    "type-fest": "^2.12.2",
+    "zod": "^3.14.3"
   },
   "devDependencies": {
     "@snailycad/permissions": "1.0.0-beta.79",
     "tsup": "^5.12.2",
     "typescript": "^4.6.3"
-  },
-  "dependencies": {
-    "type-fest": "^2.12.2",
-    "zod": "^3.14.3"
   },
   "tsup": {
     "entry": [
@@ -23,6 +35,10 @@
     "bundle": false,
     "platform": "node",
     "target": "node16",
-    "silent": true
+    "silent": true,
+    "format": [
+      "cjs",
+      "esm"
+    ]
   }
 }
