--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -45,7 +45,8 @@
     "@tsed/common": "^6.107.5",
     "@tsed/core": "^6.107.5",
     "@tsed/di": "^6.107.5",
-    "@tsed/exceptions": "^6.107.5",
+    "@tsed/exceptions": "^6.110.1",
+    "@tsed/platform-exceptions": "^6.110.1",
     "@tsed/json-mapper": "^6.107.5",
     "@tsed/platform-express": "^6.107.5",
     "@tsed/schema": "^6.107.5",
