--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -2,15 +2,14 @@
   "name": "@snailycad/api",
   "version": "1.0.0-beta.83",
   "scripts": {
-    "dev": "prisma migrate dev && prisma generate && nodemon --watch \"src/**/*.ts\" --ignore \"node_modules/**/*\" --exec ts-node -r tsconfig-paths/register src/main.ts",
-    "start": "yarn workspace @snailycad/schemas build && yarn workspace @snailycad/config build && npx prisma migrate deploy && npx prisma generate && ts-node -r tsconfig-paths/register src/main.ts",
-    "start:docker": "yarn add -D esbuild esbuild-linux-64 && yarn workspace @snailycad/schemas build && yarn workspace @snailycad/config build && npx prisma migrate deploy && prisma generate &&  ts-node -r tsconfig-paths/register src/main.ts",
-    "format": "prisma format",
-    "generate": "prisma generate",
+    "dev": "yarn prisma migrate dev && yarn  prisma generate && yarn nodemon --watch \"src/**/*.ts\" --ignore \"node_modules/**/*\" --exec yarn ts-node -r tsconfig-paths/register src/main.ts",
+    "start": "yarn prisma migrate deploy && yarn prisma generate && yarn ts-node -r tsconfig-paths/register src/main.ts",
+    "format": "yarn prisma format",
+    "generate": "yarn prisma generate",
     "typecheck": "yarn run generate && tsc --noEmit",
     "copy-env": "node ../../scripts/copy-env.mjs --api",
-    "test:watch": "vitest --watch",
-    "test": "vitest run"
+    "test:watch": "yarn vitest --watch",
+    "test": "yarn vitest run"
   },
   "devDependencies": {
     "@swc/core": "^1.2.165",
