--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -2,18 +2,18 @@
   "name": "@snailycad/client",
   "version": "1.0.0-beta.83",
   "scripts": {
-    "dev": "rimraf .env && next dev",
+    "dev": "yarn rimraf .env && yarn next dev",
     "build": "yarn validate && yarn next-build",
-    "next-build": "next build",
-    "start": "next start",
-    "start:proxy-experimental": "next start --port 80",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,md,css,json}\" --ignore-path .gitignore",
-    "lint": "eslint . --ext .ts,.js,.tsx,.jsx,",
+    "next-build": "yarn next build",
+    "start": "yarn next start",
+    "start:proxy-experimental": "yarn next start --port 80",
+    "format": "yarn prettier --write \"**/*.{js,jsx,ts,tsx,md,css,json}\" --ignore-path .gitignore",
+    "lint": "yarn eslint . --ext .ts,.js,.tsx,.jsx,",
     "validate": "node ../../scripts/validate.mjs",
-    "typecheck": "tsc --noEmit",
+    "typecheck": "yarn tsc --noEmit",
     "copy-env": "node ../../scripts/copy-env.mjs --client",
-    "test:watch": "vitest --watch",
-    "test": "vitest run"
+    "test:watch": "yarn vitest --watch",
+    "test": "yarn vitest run"
   },
   "dependencies": {
     "@casper124578/use-socket.io": "4.0.0",
