--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -15,10 +15,10 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup",
-    "typecheck": "tsc --noEmit",
-    "test:watch": "vitest --watch",
-    "test": "vitest run"
+    "build": "yarn tsup",
+    "typecheck": "yarn tsc --noEmit",
+    "test:watch": "yarn vitest --watch",
+    "test": "yarn vitest run"
   },
   "devDependencies": {
     "@snailycad/types": "1.0.0-beta.83",
