--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -51,6 +51,8 @@
     "react-cool-onclickoutside": "^1.7.0",
     "react-cropper": "^2.1.8",
     "react-digit-input": "^2.1.0",
+    "react-dnd": "15.1.2",
+    "react-dnd-html5-backend": "15.1.2",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.2.0",
     "react-leaflet": "^3.2.5",
