--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -36,6 +36,7 @@
     "@snailycad/types": "1.0.0-beta.96",
     "@snailycad/utils": "1.0.0-beta.96",
     "axios": "^0.27.2",
+    "bignumber.js": "^9.0.2",
     "date-fns": "^2.28.0",
     "formik": "^2.2.9",
     "hex-color-regex": "^1.1.0",
