--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "snailycad",
-  "version": "1.0.0-beta.98",
+  "version": "1.0.0",
   "packageManager": "yarn@3.2.0",
   "workspaces": [
     "packages/**"
