--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@snailycad/client",
-  "version": "1.0.0-beta.98",
+  "version": "1.0.0",
   "scripts": {
     "dev": "yarn rimraf .env && yarn next dev",
     "build": "yarn validate && yarn next-build",
@@ -30,11 +30,11 @@
     "@react-aria/interactions": "^3.8.4",
     "@react-aria/label": "^3.2.5",
     "@react-aria/ssr": "^3.1.2",
-    "@snailycad/config": "1.0.0-beta.98",
-    "@snailycad/permissions": "1.0.0-beta.98",
-    "@snailycad/schemas": "1.0.0-beta.98",
-    "@snailycad/types": "1.0.0-beta.98",
-    "@snailycad/utils": "1.0.0-beta.98",
+    "@snailycad/config": "1.0.0",
+    "@snailycad/permissions": "1.0.0",
+    "@snailycad/schemas": "1.0.0",
+    "@snailycad/types": "1.0.0",
+    "@snailycad/utils": "1.0.0",
     "axios": "^0.27.2",
     "bignumber.js": "^9.0.2",
     "date-fns": "^2.28.0",
