--- a/packages/telemetry/package.json
+++ b/packages/telemetry/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@snailycad/telemetry",
-  "version": "1.0.0-beta.98",
+  "version": "1.0.0",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
@@ -10,7 +10,7 @@
     "typecheck": "yarn tsc --noEmit"
   },
   "dependencies": {
-    "@snailycad/utils": "1.0.0-beta.98",
+    "@snailycad/utils": "1.0.0",
     "axios": "^0.26.1"
   },
   "devDependencies": {
