--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -41,6 +41,7 @@
     "formik": "^2.2.9",
     "hex-color-regex": "^1.1.0",
     "is-hotkey": "^0.2.0",
+    "is-mobile": "^3.1.1",
     "leaflet": "^1.7.1",
     "next": "^12.1.6",
     "next-intl": "2.7.2",
