ignore sound file changes
this is an issue when updating cad if you want custom sound files

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ packages/api/public/**/*.jpeg
 tsconfig.tsbuildinfo
 
 packages/client/public/favicon.png
+packages/client/public/sounds/*.mp3
 
 .husky/_
 .turbo
