--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -16,6 +16,7 @@
   ],
   "scripts": {
     "build": "yarn tsup",
+    "watch": "yarn tsup --watch --silent=false",
     "typecheck": "yarn tsc --noEmit",
     "test:watch": "yarn vitest --watch",
     "test": "yarn vitest run"
