--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -2,6 +2,7 @@
   "name": "@snailycad/api",
   "version": "1.11.1",
   "scripts": {
+    "watch": "docker compose up",
     "dev": "yarn prisma migrate dev && yarn  prisma generate && yarn nodemon --watch \"src/**/*.ts\" --ignore \"node_modules/**/*\" --exec yarn ts-node -r tsconfig-paths/register src/main.ts",
     "start": "yarn prisma migrate deploy && yarn prisma generate && yarn ts-node -r tsconfig-paths/register src/main.ts",
     "format": "yarn prisma format",
