--- a/turbo.json
+++ b/turbo.json
@@ -22,7 +22,9 @@
         "$SECURE_COOKIES_FOR_IFRAME",
         "$PORT_CLIENT"
       ],
-      "outputs": [".env"],
+      "outputs": [
+        ".env"
+      ],
       "cache": false
     },
     "build": {
@@ -34,17 +36,36 @@
         "$NODE_ENV",
         "$IFRAME_SUPPORT_ENABLED"
       ],
-      "outputs": [".next/**", "dist/**"],
+      "outputs": [
+        ".next/**",
+        "dist/**"
+      ],
       "cache": false
     },
     "typecheck": {
-      "dependsOn": ["^typecheck"],
+      "dependsOn": [
+        "^typecheck"
+      ],
       "outputs": []
     },
     "test": {
-      "dependsOn": ["^test"],
+      "dependsOn": [
+        "^test"
+      ],
       "outputs": []
+    },
+    "watch": {
+      "cache": false,
+      "outputs": [
+        ".next/**",
+        "dist/**"
+      ],
+      "dependsOn": [
+        "^watch"
+      ]
     }
   },
-  "globalDependencies": ["**/.env"]
+  "globalDependencies": [
+    "**/.env"
+  ]
 }
