:hammer: chore: update .env.example

--- a/.env.example
+++ b/.env.example
@@ -6,11 +6,10 @@ POSTGRES_PASSWORD="admin"
 # This is the username to the postgress database.
 POSTGRES_USER="admin"
 
-# 'postgres' is the docker-compose image. Keep port as '5432' when using docker-compose
-# The database host. (Most likely localhost)
+# The database host. (Most likely localhost) - keep port as 'postgres' when using docker-compose
 DB_HOST="postgres"
 
-# The database port
+# The database port - keep port as '5432' when using docker-compose
 DB_PORT="5432"
 
 # The database name.
@@ -19,11 +18,11 @@ POSTGRES_DB="snaily-cad-v4"
 # This is a random value to keep the CAD's cookies secured. Make sure to change this!
 JWT_SECRET="some-random-string-of-characters"
 
-# string of 32 characters long.
+# string of 32 characters long. Make sure to change this!
 # Generate one at: https://codebeautify.org/generate-random-string
 ENCRYPTION_TOKEN="Geu2WGypP7irbwa3tCeeKS6YiyluFLep"
 
-# This is the URL to your site where the CAD is hosted.
+# This is the URL/IP to your site where the CAD is hosted.
 # -> e.g. https://cad.mysite.com or http://99.99.00.190:3000
 CORS_ORIGIN_URL="http://localhost:3000"
 
@@ -32,7 +31,7 @@ CORS_ORIGIN_URL="http://localhost:3000"
 NEXT_PUBLIC_PROD_ORIGIN="http://api:8080/v1"
 
 # only enter this value if you're using a domain!
-# domain should only be the domain, not including sub-domains
+# domain should only be the domain, NOT including sub-domains
 # example: `DOMAIN="example.com"`
 DOMAIN=""
 
@@ -47,11 +46,12 @@ PORT_API=8080
 # The port of which the client will run on. Default: 3000
 PORT_CLIENT=3000
 
+# Errors get reported to Linear (Project manager). This is done so errors can be fixed faster.
+TELEMETRY_ENABLED="true"
+
 # Do not change this.
 NODE_ENV="production"
 
 # Do not change this, unless you know what you're doing!
 DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${DB_HOST}:${DB_PORT}/${POSTGRES_DB}?sslmode=prefer
 
-# Errors get reported to Linear (Project manager). This is done so errors can be fixed faster.
-TELEMETRY_ENABLED="true"
