--- a/packages/audit-logger/package.json
+++ b/packages/audit-logger/package.json
@@ -20,6 +20,7 @@
     "typecheck": "yarn tsc --noEmit"
   },
   "dependencies": {
+    "superjson": "^1.9.1",
     "type-fest": "^2.13.0"
   },
   "devDependencies": {
