--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "@discordjs/rest": "^0.5.0",
     "@prisma/client": "^3.15.2",
+    "@snailycad/audit-logger": "1.12.0",
     "@snailycad/config": "1.12.0",
     "@snailycad/permissions": "1.12.0",
     "@snailycad/schemas": "1.12.0",
