--- a/packages/audit-logger/package.json
+++ b/packages/audit-logger/package.json
@@ -6,6 +6,10 @@
       "require": "./dist/index.js",
       "import": "./dist/index.mjs"
     },
+    "./server": {
+      "require": "./dist/core/server.js",
+      "import": "./dist/core/server.mjs"
+    },
     "./package.json": "./package.json"
   },
   "files": [
@@ -26,11 +30,13 @@
   "devDependencies": {
     "@snailycad/types": "1.12.0",
     "tsup": "^6.1.2",
-    "typescript": "^4.7.3"
+    "typescript": "^4.7.3",
+    "zod": "3.17.3"
   },
   "tsup": {
     "entry": [
-      "src/**/*.ts"
+      "src/**/*.ts",
+      "src/core/server.ts"
     ],
     "dts": true,
     "bundle": false,
@@ -41,5 +47,12 @@
       "cjs",
       "esm"
     ]
+  },
+  "typesVersions": {
+    "*": {
+      "server": [
+        "dist/core/server.d.ts"
+      ]
+    }
   }
 }
