--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -31,6 +31,7 @@
     "@react-aria/interactions": "^3.9.1",
     "@react-aria/label": "^3.3.1",
     "@react-aria/ssr": "^3.2.0",
+    "@snailycad/audit-logger": "1.12.0",
     "@snailycad/config": "1.12.0",
     "@snailycad/permissions": "1.12.0",
     "@snailycad/schemas": "1.12.0",
