--- a/packages/audit-logger/package.json
+++ b/packages/audit-logger/package.json
@@ -28,6 +28,7 @@
     "typecheck": "yarn tsc --noEmit"
   },
   "dependencies": {
+    "@snailycad/utils": "1.12.0",
     "superjson": "^1.9.1",
     "type-fest": "^2.13.0"
   },
