--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -57,6 +57,7 @@
     "cookie": "^0.5.0",
     "cookie-parser": "1.4.6",
     "cors": "2.8.5",
+    "cuid": "^2.1.8",
     "discord-api-types": "0.34.0",
     "express": "4.18.1",
     "glob": "^8.0.3",
