--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "prettier": "^2.7.1",
     "pretty-quick": "^3.1.3",
     "turbo": "^1.3.1"
+  },
+  "dependencies": {
+    "globby": "^13.1.2"
   }
 }
