--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -36,7 +36,8 @@
   "devDependencies": {
     "@snailycad/permissions": "1.14.0",
     "tsup": "^6.1.2",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "discord-api-types": "0.35.0"
   },
   "tsup": {
     "entry": [
