--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -26,8 +26,8 @@
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "yarn workspace @snailycad/api generate && yarn tsup",
-    "watch": "yarn tsup --watch --silent=false",
+    "build": "yarn workspace @snailycad/api generate && rm -rf ./dist && yarn tsup",
+    "watch": "rm -rf ./dist && yarn tsup --watch --silent=false",
     "typecheck": "yarn workspace @snailycad/api generate && yarn tsc --noEmit"
   },
   "dependencies": {
@@ -35,13 +35,13 @@
   },
   "devDependencies": {
     "@snailycad/permissions": "1.14.0",
+    "discord-api-types": "0.35.0",
     "tsup": "^6.1.2",
-    "typescript": "^4.7.4",
-    "discord-api-types": "0.35.0"
+    "typescript": "^4.7.4"
   },
   "tsup": {
     "entry": [
-      "src/**/*.ts"
+      "./src/**/*.ts"
     ],
     "dts": true,
     "bundle": false,
