--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -21,8 +21,10 @@
     "test:watch": "yarn vitest --watch",
     "test": "yarn vitest run"
   },
+  "dependencies": {
+    "@snailycad/types": "1.14.1"
+  },
   "devDependencies": {
-    "@snailycad/types": "1.14.1",
     "tsup": "^6.1.2",
     "typescript": "^4.7.4",
     "vite": "^2.9.13",
