--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -39,6 +39,9 @@
       ]
     }
   },
+  "dependencies": {
+    "@snailycad/types": "1.14.1"
+  },
   "scripts": {
     "build": "yarn tsup",
     "watch": "yarn tsup --watch --silent=false",
@@ -47,7 +50,6 @@
     "test": "yarn vitest run"
   },
   "devDependencies": {
-    "@snailycad/types": "1.14.1",
     "c8": "^7.11.3",
     "tslib": "^2.4.0",
     "tsup": "^6.1.2",
