--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -37,6 +37,8 @@
   "dependencies": {
     "@discordjs/rest": "^0.5.0",
     "@prisma/client": "^4.0.0",
+    "@sentry/node": "^7.5.1",
+    "@sentry/tracing": "^7.5.1",
     "@snailycad/config": "1.15.0",
     "@snailycad/permissions": "1.15.0",
     "@snailycad/schemas": "1.15.0",
