--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -31,7 +31,7 @@
     "@react-aria/interactions": "^3.9.1",
     "@react-aria/label": "^3.3.1",
     "@react-aria/ssr": "^3.2.0",
-    "@sentry/nextjs": "^7.5.1",
+    "@sentry/react": "^7.5.1",
     "@sentry/tracing": "^7.5.1",
     "@snailycad/config": "1.15.1",
     "@snailycad/permissions": "1.15.1",
