:hammer: chore: use SnailyCAD data-image-uri fork

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -39,6 +39,7 @@
     "@prisma/client": "^4.0.0",
     "@sentry/node": "^7.6.0",
     "@sentry/tracing": "^7.6.0",
+    "@snaily-cad/image-data-uri": "^3.0.1",
     "@snailycad/config": "1.16.0",
     "@snailycad/permissions": "1.16.0",
     "@snailycad/schemas": "1.16.0",
@@ -63,7 +64,6 @@
     "discord-api-types": "0.36.1",
     "express": "4.18.1",
     "glob": "^8.0.3",
-    "image-data-uri": "^2.0.1",
     "jsonwebtoken": "8.5.1",
     "nanoid": "^3.3.4",
     "nodemon": "^2.0.19",
