--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -11,6 +11,7 @@
     "skipLibCheck": true,
     "importsNotUsedAsValues": "error",
     "pretty": true,
+    "resolveJsonModule": true,
 
     /* Additional Checks */
     "noUnusedLocals": true /* Report errors on unused locals. */,
