:hammer: chore: set db_host default as localhost

--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,8 @@ POSTGRES_PASSWORD="admin"
 # This is the username to the postgress database.
 POSTGRES_USER="admin"
 
-# The database host. (Most likely localhost) - keep port as 'postgres' when using docker-compose
-DB_HOST="postgres"
+# The database host - Set as 'postgres' when using docker-compose
+DB_HOST="localhost"
 
 # The database port - keep port as '5432' when using docker-compose
 DB_PORT="5432"
