:rocket: @tanstack/react-table v8

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -39,6 +39,7 @@
     "@snailycad/schemas": "1.19.2",
     "@snailycad/types": "1.19.2",
     "@snailycad/utils": "1.19.2",
+    "@tanstack/react-table": "^8.5.11",
     "@tanstack/react-virtual": "^3.0.0-alpha.0",
     "@tanstack/virtual-core": "^3.0.0-alpha.1",
     "axios": "^0.27.2",
@@ -68,7 +69,6 @@
     "react-leaflet": "^4.0.1",
     "react-select": "^5.4.0",
     "react-sortablejs": "^6.1.4",
-    "react-table": "^7.8.0",
     "react-use": "^17.4.0",
     "slate": "^0.82.0",
     "slate-history": "^0.66.0",
@@ -84,7 +84,6 @@
     "@types/leaflet": "^1.7.11",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
-    "@types/react-table": "^7.7.12",
     "@types/sortablejs": "^1.13.0",
     "@types/uuid": "^8.3.4",
     "autoprefixer": "^10.4.8",
